# chronotva

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yaml
src/chronotva/: __init__.py  cli.py  default_data.py  tesseract.py
tests/: test_cli.py  test_tesseract.py
